# tflite-crossplatform

./: .gitignore  LICENSE  README.md
LinesDetector/: LinesDetector.cpp  LinesDetector.h
ObjectDetection/: ObjectDetector.cpp  ObjectDetector.h
WinTestApp/: WinTestApp.cpp  WinTestApp.sln  WinTestApp.vcxproj  WinTestApp.vcxproj.filters
android/: .gitignore  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/vyw/tflite/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  LinesDetectionActivity.cpp  ObjectDetectionActivity.cpp  native-lib.cpp
android/app/src/main/java/com/vyw/tflite/: LinesDetection.kt  MainActivity.kt  ObjectDetection.kt
android/app/src/main/res/layout/: activity_lines_detection.xml  activity_main.xml  activity_object_detection.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/vyw/tflite/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
ios/: .gitignore  Podfile
ios/app/: DetectionCanvas.swift  Info.plist  ObjectDetectionVC.swift
ios/app.xcodeproj/: project.pbxproj
ios/app/Base.lproj/: Main.storyboard
ios/app/Native/: CV.h  CV.mm  app-Bridging-Header.h
models/: labels.txt
